force-app-modified/main/default/objects/Learning_Program_Subjects__c/Learning_Program_Subjects__c.object-meta.xml
<CustomObject>
    <label>מקצוע תכנית הלימוד</label>
    <nameField>
        <displayFormat>LPS-{00000}</displayFormat>
        <label>Name Learning Program Subjects</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>מקצועות תכנית הלימוד</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>