force-app-modified/main/default/objects/Learning_Program_Subjects__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <label>Comments</label>
    <length>150</length>
    <type>Text</type>
</CustomField>