force-app-modified/main/default/objects/Learning_Program_Subjects__c/fields/LearningProgram__c.field-meta.xml
<CustomField>
    <fullName>LearningProgram__c</fullName>
    <label>תכנית לימוד</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Learning_program__c.Status__c</field>
            <operation>equals</operation>
            <value>פעילה</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Learning_program__c</referenceTo>
    <relationshipLabel>מקצועות תכנית הלימוד</relationshipLabel>
    <relationshipName>Learning_Program_Subjects</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>