force-app-modified/main/default/objects/Learning_Program_Subjects__c/fields/Pass_or_Fail__c.field-meta.xml
<CustomField>
    <fullName>Pass_or_Fail__c</fullName>
    <label>Pass or Fail</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>עבר</fullName>
            </value>
            <value>
                <fullName>נכשל</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>