force-app-modified/main/default/objects/Learning_Program_Subjects__c/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <label>מקצוע</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Course_Subject</valueSetName>
    </valueSet>
</CustomField>